--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ footer {
     .hero-video-container { opacity: 1; }
     .menu-btn { display: block; }
     .section-title h2 {
-        size:1.2rem;
+        font-size: 1rem;
     }
     
     .pc-nav {
